# swiss-rooftop-explorer

./: .gitignore  Makefile  README.md  buildings.qgz  init.sh  pyproject.toml
assets/: bridge_parameters.db
qgis/: bridges.qgz  identify_fraction.py
scripts/: addresses_sqlite2pq.py  bridge_creation.py  create_addl_buildings_from_roof.py  create_bridge_db.sh  create_bridges_3d.py  create_bridges_kml.py  create_center_points.py  create_topoprint_script_for_bridges.py  get_obj.py  pq2pmtiles.sh  roofs.filter.json  show_obj.py  swissbuildings3D_gdb2pq.py  swissbuildings3D_process.py  utilities.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: addresses.js  main.js  style.css
