[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask-geopandas>=0.4.3",
    "gdal",
    "geopandas[all]>=1.0.1",
    "hishel>=0.1.1",
    "psutil>=6.1.1",
    "pyarrow>=19.0.0",
    "shapely>=2.0.6",
    "tqdm>=4.67.1",
    "trimesh>=4.6.8",
]
